--- a/index.html
+++ b/index.html
@@ -625,8 +625,8 @@
             <h1 class="hero-title">VANCOUVER<br>FASHION SHOWCASE</h1>
             <h2 class="hero-headline">Headlining Designer: Goldy Brown</h2>
             <p class="hero-description">
-                One night only. 4 visionary designers. 50 elite models.<br>
-                Where luxury meets streetwear in the heart of Vancouver.
+                One night only. 5 visionary designers. 50 models.<br>
+                The Future of Fashion, Live in Vancouver.
             </p>
             <div class="cta-buttons">
                 <a href="#model-apply" class="btn btn-primary">Apply as Model</a>
