--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                 <div id="designer-apply" class="form-card">
                     <h3>Designer Application</h3>
                     <p>Showcase your collection alongside industry leaders. Limited to 3-4 guest designers for this exclusive event.</p>
-                    <span class="fee-badge">Participation Fee: $250-500</span>
+                    <span class="fee-badge">Participation Fee: $100</span>
                     
                     <form id="designer-form" action="#" method="POST">
                         <div class="form-group">
