--- a/index.html
+++ b/index.html
@@ -723,14 +723,14 @@
                     <div style="background: linear-gradient(135deg, rgba(212, 175, 55, 0.1) 0%, rgba(212, 175, 55, 0.05) 100%); border: 1px solid var(--gold); padding: 25px; margin: 20px 0; border-radius: 5px;">
                         <h4 style="color: var(--gold); margin-bottom: 15px; font-size: 20px; text-transform: uppercase; letter-spacing: 0.1em;">What You Get</h4>
                         <ul style="list-style: none; padding: 0; color: #e0e0e0; line-height: 1.8;">
-                            <li style="padding: 5px 0;">✨ <strong style="color: var(--gold);">Professional Portfolio:</strong> High-res runway photos for your portfolio</li>
-                            <li style="padding: 5px 0;">📸 <strong style="color: var(--gold);">Media Exposure:</strong> Featured on event social media & press coverage</li>
-                            <li style="padding: 5px 0;">🎥 <strong style="color: var(--gold);">Video Content:</strong> Professional runway footage for your reel</li>
-                            <li style="padding: 5px 0;">👗 <strong style="color: var(--gold);">Designer Connections:</strong> Network with 5 established designers</li>
-                            <li style="padding: 5px 0;">💄 <strong style="color: var(--gold);">Pro Glam Team:</strong> Hair & makeup by industry professionals</li>
-                            <li style="padding: 5px 0;">🏆 <strong style="color: var(--gold);">Career Opportunity:</strong> Exposure to agencies & industry scouts</li>
-                            <li style="padding: 5px 0;">🎁 <strong style="color: var(--gold);">Model Gift Bag:</strong> Exclusive swag from sponsors</li>
-                            <li style="padding: 5px 0;">🎫 <strong style="color: var(--gold);">Guest Passes:</strong> 2 complimentary tickets for family/friends</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Professional Portfolio:</strong> High-res runway photos for your portfolio</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Media Exposure:</strong> Featured on event social media & press coverage</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Video Content:</strong> Professional runway footage for your reel</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Designer Connections:</strong> Network with 5 established designers</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Pro Glam Team:</strong> Hair & makeup by industry professionals</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Career Opportunity:</strong> Exposure to agencies & industry scouts</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Model Gift Bag:</strong> Exclusive swag from sponsors</li>
+                            <li style="padding: 5px 0;"> <strong style="color: var(--gold);">Guest Passes:</strong> 2 complimentary tickets for family/friends</li>
                         </ul>
                     </div>
                     
