--- a/index.html
+++ b/index.html
@@ -731,14 +731,12 @@
                     <div class="benefits-box">
                         <h4>What You Get</h4>
                         <ul>
-                            <li>✨ <strong>Professional Portfolio:</strong> High-res runway photos for your portfolio</li>
-                            <li>📸 <strong>Media Exposure:</strong> Featured on event social media & press coverage</li>
-                            <li>🎥 <strong>Video Content:</strong> Professional runway footage for your reel</li>
-                            <li>👗 <strong>Designer Connections:</strong> Network with 5 established designers</li>
-                            <li>💄 <strong>Pro Glam Team:</strong> Hair & makeup by industry professionals</li>
-                            <li>🏆 <strong>Career Opportunity:</strong> Exposure to agencies & industry scouts</li>
-                            <li>🎁 <strong>Model Gift Bag:</strong> Exclusive swag from sponsors</li>
-                            <li>🎫 <strong>Guest Passes:</strong> 2 complimentary tickets for family/friends</li>
+                            <li> <strong>Professional Portfolio:</strong> High-res runway photos for your portfolio</li>
+                            <li> <strong>Media Exposure:</strong> Featured on event social media & press coverage</li>
+                            <li> <strong>Video Content:</strong> Professional runway footage for your reel</li>
+                            <li> <strong>Designer Connections:</strong> Network with established designers</li>
+                            <li> <strong>Pro Glam Team:</strong> Hair & makeup by industry professionals</li>
+                            <li> <strong>Guest Passes:</strong> 2 complimentary tickets for family/friends</li>
                         </ul>
                     </div>
                     
@@ -784,12 +782,12 @@
                     <div class="benefits-box">
                         <h4>Designer Benefits</h4>
                         <ul>
-                            <li>🎭 <strong>10-12 Models:</strong> Professional models to showcase your collection</li>
-                            <li>📺 <strong>Media Coverage:</strong> Press, photographers & videographers</li>
-                            <li>🎵 <strong>Full Production:</strong> Sound, lighting & stage management</li>
-                            <li>👥 <strong>Buyer Access:</strong> Connect with retailers & boutique owners</li>
-                            <li>📱 <strong>Social Promotion:</strong> Featured across all event channels</li>
-                            <li>🎬 <strong>Professional Content:</strong> Photos & video for marketing</li>
+                            <li> <strong>10-12 Models:</strong> Professional models to showcase your collection</li>
+                            <li> <strong>Media Coverage:</strong> Press, photographers & videographers</li>
+                            <li> <strong>Full Production:</strong> Sound, lighting & stage management</li>
+                            <li> <strong>Buyer Access:</strong> Connect with retailers & boutique owners</li>
+                            <li> <strong>Social Promotion:</strong> Featured across all event channels</li>
+                            <li> <strong>Professional Content:</strong> Photos & video for marketing</li>
                         </ul>
                     </div>
                     
