--- a/index.html
+++ b/index.html
@@ -803,8 +803,12 @@
                             <input type="text" id="designer-brand" name="brand" required>
                         </div>
                         <div class="form-group">
-                            <label for="designer-portfolio">Portfolio URL</label>
+                            <label for="designer-portfolio">Brand Website</label>
                             <input type="url" id="designer-portfolio" name="portfolio" placeholder="https://">
+                        </div>
+                        <div class="form-group">
+                            <label for="model-ig">Instagram Handle</label>
+                            <input type="text" id="model-ig" name="instagram" placeholder="@username">
                         </div>
                         <div class="form-group">
                             <label for="designer-email">Email</label>
