--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                         </div>
                         <!-- Stripe Payment Link Integration -->
                         <!-- Replace # with your Stripe payment link for designer application -->
-                        <a href="https://buy.stripe.com/test_YYYYYY" class="btn btn-primary" style="width: 100%; border: none;" target="_blank">Proceed to Payment</a>
+                        <a href="https://buy.stripe.com/test_YYYYYY" class="btn btn-primary" style="width: 100%; border: none;" target="_blank">Proceed to Payment ($100) </a>
                     </form>
                 </div>
             </div>
