--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
             </div>
             <div class="sponsor-grid">
                 <div class="sponsor-card main">
-                    <h4>GOLDY BROWN</h4>
+                        <img src="https://imgur.com/a/LR0P41u" alt="Sponsor Name" style="max-width: 150px; height: auto; margin-bottom: 15px;">
                     <p>Main Sponsor & Headlining Designer</p>
                 </div>
                 <div class="sponsor-card">
