--- a/index.html
+++ b/index.html
@@ -880,7 +880,9 @@
             </div>
             <div class="sponsor-grid">
                 <div class="sponsor-card main">
-                        <img src="https://i.imgur.com/0Mr8xlt.png" alt="Sponsor Name" style="max-width: 150px; height: auto; margin-bottom: 15px;">
+                        <img src="https://i.imgur.com/0Mr8xlt.png"
+                            style="max-width: 400px; width: 100%; height: auto; margin-bottom: 20px;">
+    <h4 style="font-size: 32px;">GOLDY BROWN</h4>   
                     <p>Main Sponsor & Headlining Designer</p>
                 </div>
                 <div class="sponsor-card">
